--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 node_modules
 test
 .c9revisions
+.idea/.name
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/node_redis_cluster.iml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/scopes/scope_settings.xml
